--- a/client/index.css
+++ b/client/index.css
@@ -1,3 +1,25 @@
 body {
     background-color: aquamarine;
 }
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+
+}
+
+img {
+    align-items: center;
+    margin-top: 15px;
+    margin-right: 4px;
+}
+
+
+
+h1 {
+    text-align: center;
+}
